tried to fix more info box w/ sponsors inside, menu home button, fly high page heading center alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -417,7 +417,7 @@ h4{
 }
 
 .soon-title{
-    padding-top: 10px;
+    padding-top: 0px;
     text-align: center;
     font-size: 5rem;
 }
